Added basic mechanics

--- a/lib/src/components/dragon_info.html
+++ b/lib/src/components/dragon_info.html
@@ -1,1 +1,3 @@
-<h2>Name: {{dragon.name}}</h2>
+<div>Name: {{dragon.name}}</div>
+<div>Weight: {{dragon.weight}} lbs.</div>
+<div>Stomach capacity: {{dragon.stomachSpaceInUse}} / {{dragon.stomachCapacity}}</div>
