--- a/lib/src/components/tasks.html
+++ b/lib/src/components/tasks.html
@@ -1,5 +1,5 @@
 <div *ngFor="let task of dragon.unlockedTasks">
-    <div class="card">
+    <div class="card" data-toggle="tooltip" [attr.title]="task.desc">
         <div class="card-body">
             <button
                 type="button"
