--- a/lib/src/components/log.html
+++ b/lib/src/components/log.html
@@ -1,3 +1,3 @@
 <div *ngFor="let logEntry of dragon.log">
-    <div>{{logEntry.message}}</div>
+    <div [style.color]="logColor(logEntry)"><span class="font-weight-lighter">{{logEntry.time | date: 'short'}}:</span> {{logEntry.message}}</div>
 </div>
