--- a/lib/src/components/log_toasts.html
+++ b/lib/src/components/log_toasts.html
@@ -1,10 +1,12 @@
 <div style="position: absolute; bottom: 0; right: 0;" #toastPanel (init)="onInit(toastPanel)">
-    <div *ngFor="let logEntry of dragon.log">
-        <div class="alert {{logColor(logEntry)}} alert-dismissible fade show" role="alert">
+    <div
+        *ngFor="let logEntry of dragon.log"
+        class="alert {{logColor(logEntry)}} alert-dismissible fade show"
+        role="alert"
+    >
         {{logEntry.message}}
         <button type="button" class="close" data-dismiss="alert">
             <span>&times;</span>
         </button>
-        </div>
     </div>
 </div>
