--- a/lib/src/components/food.html
+++ b/lib/src/components/food.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div *ngFor="let entry of dragon.inventory.entries; trackBy: trackByInvetoryLength" #pane (init)="enableToolips(pane)">
+<div *ngFor="let entry of dragon.inventory.entries; trackBy: trackByInvetoryLength" #pane (init)="enableTooltips(pane)">
     <div class="card" data-toggle="tooltip" [attr.title]="entry.key.desc">
         <div class="card-body">
             <button
