--- a/lib/src/components/tasks.html
+++ b/lib/src/components/tasks.html
@@ -1,4 +1,4 @@
-<div *ngFor="let task of dragon.unlockedTasks" #pane (init)="enableToolips(pane)">
+<div *ngFor="let task of dragon.unlockedTasks" #pane (init)="enableTooltips(pane)">
     <div class="card" data-toggle="tooltip" [attr.title]="task.desc">
         <div class="card-body">
             <button
