--- a/lib/src/components/food.html
+++ b/lib/src/components/food.html
@@ -5,7 +5,7 @@
         style="width: {{dragon.eatingProgressPercent | percent: '1.0-12'}};"
     ></div>
     <div class="justify-content-center d-flex position-absolute w-100">
-        {{dragon.eatingProgressPercent | percent}}
+        {{dragon.eatingProgressPercent | percent: '1.0-0'}}
     </div>
 </div>
 
