--- a/lib/src/components/buildings.html
+++ b/lib/src/components/buildings.html
@@ -12,7 +12,7 @@
                 </button>
                 <div class="col p-0 m-1">
                     <div><i class="fa fa-home"></i> {{building.owned}}</div>
-                    <div><i class="fa fa-gem"></i> {{dragon.buildingCost(building) | number: '1.0-0'}}</div>
+                    <div><i class="fa fa-coins"></i> {{dragon.buildingCost(building) | number: '1.0-0'}}</div>
                 </div>
             </div>
         </div>
