--- a/lib/src/components/dragon_info.html
+++ b/lib/src/components/dragon_info.html
@@ -1,3 +1,6 @@
-<div>Name: {{dragon.name}}</div>
-<div>Weight: {{dragon.weight | number: '1.0-0'}} lbs.</div>
-<div>Stomach: <span [style.color]="stomachFullnessColor">{{stomachFullnessDesc}}</span></div>
+<div class="d-flex flex-column h-100">
+    <div>Name: {{dragon.name}}</div>
+    <div>Weight: {{dragon.weight | number: '1.0-0'}} lbs.</div>
+    <div>Stomach: <span [style.color]="stomachFullnessColor">{{stomachFullnessDesc}}</span></div>
+    <div class="mt-auto"><i>{{banner}}</i></div>
+</div>
