--- a/lib/src/components/settings.html
+++ b/lib/src/components/settings.html
@@ -8,11 +8,48 @@
     aria-expanded="false"
 ></button>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="settings-button">
-    <span class="dropdown-item-text text-muted" href="#">Version {{version}}</span>
-    <a class="dropdown-item" href="#">About...</a>
+    <h6 class="dropdown-header">Version {{version}}</h6>
+    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#dialogAbout">About...</a>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="#">Save game</a>
+    <h6 class="dropdown-header">Actions</h6>
+    <a class="dropdown-item" href="#" (click)="saveGame()">Save game</a>
+    <a class="dropdown-item" href="#">Load game...</a>
     <a class="dropdown-item" href="#">Export save file...</a>
     <a class="dropdown-item" href="#">Import save file...</a>
     <a class="dropdown-item" href="#">Reset game...</a>
+    <a class="dropdown-item" href="#">Delete save data...</a>
+    <div class="dropdown-divider"></div>
+    <h6 class="dropdown-header">Settings</h6>
+    <form class="dropdown-item form-group"><div class="form-check">
+        <input
+            type="checkbox"
+            class="form-check-input"
+            id="settingAutosave"
+            [checked]="autosave"
+            #autosaveElement
+            (change)="autosave = autosaveElement.checked"
+        >
+        <label class="form-check-label" for="settingAutosave">Autosave</label>
+    </div></form>
+</div>
+
+<div class="modal fade" id="dialogAbout" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">About</h5>
+            <button type="button" class="close" data-dismiss="modal">
+                <span>&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <div>Go Hoard Yourself, version {{version}}.</div>
+            <div>Made by <a href="https://twitter.com/thatgreydragon/">@thatgreydragon</a>.</div>
+            <div>Available <a href="https://github.com/ThatGreyDragon/go_hoard_yourself">open-source on GitHub</a>.</div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+        </div>
+        </div>
+    </div>
 </div>
