--- a/lib/src/components/settings.html
+++ b/lib/src/components/settings.html
@@ -13,11 +13,10 @@
     <div class="dropdown-divider"></div>
     <h6 class="dropdown-header">Actions</h6>
     <a class="dropdown-item" href="#" (click)="saveGame()">Save game</a>
-    <a class="dropdown-item" href="#">Load game...</a>
-    <a class="dropdown-item" href="#">Export save file...</a>
-    <a class="dropdown-item" href="#">Import save file...</a>
-    <a class="dropdown-item" href="#">Reset game...</a>
-    <a class="dropdown-item" href="#">Delete save data...</a>
+    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#dialogLoad">Load game...</a>
+    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#">Export save file...</a>
+    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#">Import save file...</a>
+    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#dialogReset">Reset game...</a>
     <div class="dropdown-divider"></div>
     <h6 class="dropdown-header">Settings</h6>
     <form class="dropdown-item form-group"><div class="form-check">
@@ -49,6 +48,50 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+        </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="dialogLoad" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Load Game</h5>
+            <button type="button" class="close" data-dismiss="modal">
+                <span>&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            Are you sure you want to load your last saved game?
+            This will erase all progress since your last save!
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="loadGame()">Load Game</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="dialogReset" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Reset Game</h5>
+            <button type="button" class="close" data-dismiss="modal">
+                <span>&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            Are you sure you want to reset the game?
+            This will erase ALL saved progress!
+            (If you do not have autosave enabled, you can reload your existing game,
+            but saving agaiun will permamently erase your previous progress.)
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="resetGame()">Reset Game</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         </div>
         </div>
     </div>
