Added icon to clarify food

--- a/lib/src/components/food.html
+++ b/lib/src/components/food.html
@@ -21,7 +21,7 @@
             >
                 {{entry.key.name}}
             </button>
-            {{entry.value}}
+            <i class="fa fa-utensils"></i> {{entry.value}}
         </div>
     </div>
 </div>
