--- a/lib/src/components/popup.html
+++ b/lib/src/components/popup.html
@@ -7,7 +7,7 @@
                 <span>&times;</span>
             </button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body" style="white-space: pre-line;">
             {{message}}
         </div>
         <div class="modal-footer">
