--- a/lib/src/components/food.html
+++ b/lib/src/components/food.html
@@ -9,35 +9,35 @@
     </div>
 </div>
 
-<div *ngFor="let entry of dragon.inventory.entries; trackBy: trackByInvetoryLength" #pane (init)="enableTooltips(pane)">
-    <div class="card" data-toggle="tooltip" [attr.title]="entry.key.desc">
+<div *ngFor="let food of foodUnlocked" #pane (init)="enableTooltips(pane)">
+    <div class="card" data-toggle="tooltip" [attr.title]="food.desc">
         <div class="container card-body"><div class="row">
             <button
                 type="button"
                 class="col btn"
-                [class.btn-primary]="beingEaten(entry.key)"
-                [class.btn-secondary]="!beingEaten(entry.key)"
-                (click)="onFoodSelected(entry.key)"
+                [class.btn-primary]="beingEaten(food)"
+                [class.btn-secondary]="!beingEaten(food)"
+                (click)="onFoodSelected(food)"
             >
-                {{entry.key.name}}
+                {{food.name}}
             </button>
-            <div class="col"><i class="fa fa-utensils"></i> {{entry.value}}</div>
+            <div class="col"><i class="fa fa-utensils"></i> {{food.owned}}</div>
             <div class="col" *ngIf="dragon.feedingUnlocked">
                 <form><div class="form-group">
                   <label for="priority">Priority:</label>
-                  <select class="form-control" id="priority">
-                    <option>Do Not Eat</option>
-                    <option>Very Low</option>
-                    <option>Low</option>
-                    <option>Medium</option>
-                    <option>High</option>
-                    <option>Very High</option>
+                  <select class="form-control" id="priority" #priority (change)="onPriorityChange(food, priority.selectedIndex)">
+                    <option [selected]="food.priority.index == 0">Do Not Eat</option>
+                    <option [selected]="food.priority.index == 1">Very Low</option>
+                    <option [selected]="food.priority.index == 2">Low</option>
+                    <option [selected]="food.priority.index == 3">Medium</option>
+                    <option [selected]="food.priority.index == 4">High</option>
+                    <option [selected]="food.priority.index == 5">Very High</option>
                   </select>
                 </div></form>
             </div>
             <div class="col" *ngIf="dragon.sellingUnlocked">
                 <form><div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="sell">
+                    <input type="checkbox" class="form-check-input" id="sell" [checked]="food.sellable" #sell (change)="food.sellable = sell.checked">
                     <label class="form-check-label" for="sell">Sell?</label>
                 </div></form>
             </div>
